samples/_failures_safe/1761244629_56bebf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f27260f.c: In function ‘main’:
./samples/SAFE/__tmp_3f27260f.c:150:9: error: expected declaration or statement at end of input
  150 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_3f27260f.c:150:9: error: expected declaration or statement at end of input
